--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Legal Document Summaries</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Legal Document Summarizer</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Legal Document Summaries</h1>
-        <div id="summaries"></div>
-    </div>
+    <h1>Legal Document Summarizer</h1>
+    <form id="documentForm">
+        <input type="file" id="documentInput" accept=".pdf" required>
+        <button type="submit">Summarize Document</button>
+    </form>
+    <div id="summary"></div>
 
     <script src="script.js"></script>
 </body>
